# Store-Commerce

./: README.md
backend/: .pre-commit-config.yaml  README.md  appspec.yml  pyproject.toml  requirements.txt
backend/apps/Auth/: admin.py  forms.py  jwttoken.py  messages.py  models.py  serializers.py  urls.py  views.py
backend/apps/Auth/migrations/: 0001_initial.py
backend/apps/notifications/: consumer.py  models.py  routing.py  serialziers.py  urls.py  views.py
backend/apps/notifications/migrations/: 0001_initial.py
backend/apps/order/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/order/migrations/: 0001_initial.py  0002_initial.py
backend/apps/service_providers/: admin.py  apps.py  forms.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/apps/service_providers/migrations/: 0001_initial.py  0002_initial.py
backend/apps/storage_units/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/storage_units/migrations/: 0001_initial.py
backend/apps/templates/auth/: verify_user.html
backend/apps/templates/email/: email.html
backend/apps/templates/orders/: admin-user.html  end-user.html  order-continue.html
backend/config/: asgi.py  settings.py  urls.py  wsgi.py
backend/scripts/: after_install.sh  before_install.sh
backend/utils/: email.py  generatetoken.py
frontend/: README.md  package-lock.json
frontend/src/: App.js
frontend/src/components/actions/: ordersActions.js
frontend/src/components/pages-components/Cart/: CheckoutCard.jsx
frontend/src/components/pages-components/Home/HomeOrdersTable/: HomeOrdersTable.jsx
frontend/src/components/pages-components/Orders/: Orders.jsx
frontend/src/components/pages-components/ServiceProviderDashboard/: DashboardMainPage.jsx
frontend/src/components/reducers/: ordersReducers.js
frontend/src/components/shared-components/Navbar/: Navbar.jsx
(+20 files in other folders)
